# QTChat

./: CMakeLists.txt  ClickLabel.h  chatwindow.cpp  chatwindow.h  main.cpp  mainwindow.ui
Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
